--- a/flower.html
+++ b/flower.html
@@ -9,7 +9,7 @@
     <title>Flower</title>
   </head>
   <body class="container">
-    <audio src="sound/BTS - Permission to Dance.mp3" autoplay controls></audio>
+    <audio src="sound/BTS - Permission to Dance.mp3" autoplay></audio>
     <div id="lyrics">
   
     </div>
